--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script>
         let text1 = "リンゴ・バナナ";
         let text2 = "レモン";
-        let mix_fluits = text1 + text2.replace("バナナ",);
-        alert(mix_fluits);
+        let mix_fruits = (text1 + text2).replace("バナナ",'');
+        alert(mix_fruits);
     </script>
 </body>
 </html>
